OSX retina - image paint brush paints 2x wider than brush setting, cant paint 1px #48456

Closed
opened 2016-05-17 17:31:47 +02:00 by Martin Lindelöf · 11 comments

System Information
Operating system and graphics card
iMac (Retina 5K, 27-inch, Late 2015)
AMD Radeon R9 M380 2048 MB

Blender Version
Broken: Blender 2016-05-16 hash:29a17d5 (from buildbot)
Worked: (optional)

Short description of error
For a long time it's bothered me at work I have problems painting pixel art, at home on windows there's no problem to have a 1px size brush
and un-check pen pressure for Radius and draw. But at work on my Mac it's stuck at 3px, unless I check pen pressure for Radius as a work around.
I'm attaching some images with the settings and result. Please investigate I saw a similar bug about 8px resize upwards and nothing happening as solved.

Screen Shot 2016-05-17 at 17.20.59.png

Screen Shot 2016-05-17 at 17.21.23.png

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Switch to UV/Image editor, make a new image, preferable really small 32x32 with UV Grid.
  2. Resize brush to 1px, uncheck pen-pressure for Strength and Radius. Paint.
**System Information** Operating system and graphics card iMac (Retina 5K, 27-inch, Late 2015) AMD Radeon R9 M380 2048 MB **Blender Version** Broken: Blender 2016-05-16 hash:29a17d5 (from buildbot) Worked: (optional) **Short description of error** For a long time it's bothered me at work I have problems painting pixel art, at home on windows there's no problem to have a 1px size brush and un-check pen pressure for Radius and draw. But at work on my Mac it's stuck at 3px, unless I check pen pressure for Radius as a work around. I'm attaching some images with the settings and result. Please investigate I saw a similar bug about 8px resize upwards and nothing happening as solved. ![Screen Shot 2016-05-17 at 17.20.59.png](https://archive.blender.org/developer/F312808/Screen_Shot_2016-05-17_at_17.20.59.png) ![Screen Shot 2016-05-17 at 17.21.23.png](https://archive.blender.org/developer/F312810/Screen_Shot_2016-05-17_at_17.21.23.png) **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1) Switch to UV/Image editor, make a new image, preferable really small 32x32 with UV Grid. 2) Resize brush to 1px, uncheck pen-pressure for Strength and Radius. Paint.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MartinLindelof

Added subscriber: @MartinLindelof

Added subscriber: @RJW

Added subscriber: @RJW

On OSX 10.11.5, iMac (non-retina)
Official and 2016-05-18 Hash: 89df672

It works OK for me, with or without pressure sensitivity. Retina perhaps?

On OSX 10.11.5, iMac (non-retina) Official and 2016-05-18 Hash: 89df672 It works OK for me, with or without pressure sensitivity. Retina perhaps?

Added subscriber: @DavidJeske

Added subscriber: @DavidJeske

I see the problem on OSX 10.11.5, retina MBP, official 2.77a abf6f08.

 https://www.youtube.com/watch?v=62yzADkMXZM&feature=youtu.be

I'll take a look tomorrow and see if I can figure it out.

I see the problem on OSX 10.11.5, retina MBP, official 2.77a abf6f08. ``` https://www.youtube.com/watch?v=62yzADkMXZM&feature=youtu.be ``` I'll take a look tomorrow and see if I can figure it out.

I have posted a patch D2044, which I believe fixes the problem.

The issue was that the paint brush was "adjusting" for retina pixel size by inflating the brush effective size by U.pixelsize (2 on retina machines, normally 1 on other machines). However, this meant a 1 pixel brush was 2 pixels wide. My patch removes this inflation and instead inflates the drawn size of the brush cursor by U.pixelsize to account for retina DPI.

https://developer.blender.org/D2044

I recommend changing the title of this bug to something like:

OSX retina - image paint brush paints 2x wider than brush setting, cant paint 1px

I have posted a patch [D2044](https://archive.blender.org/developer/D2044), which I believe fixes the problem. The issue was that the paint brush was "adjusting" for retina pixel size by inflating the brush effective size by U.pixelsize (2 on retina machines, normally 1 on other machines). However, this meant a 1 pixel brush was 2 pixels wide. My patch removes this inflation and instead inflates the drawn size of the brush cursor by U.pixelsize to account for retina DPI. https://developer.blender.org/D2044 I recommend changing the title of this bug to something like: OSX retina - image paint brush paints 2x wider than brush setting, cant paint 1px

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Can confirm the issue by switching to double pixel size ({nav User Preferences > System > Virtual Pixel Size}) here on Linux (kinda simulating what retina does).

Can confirm the issue by switching to double pixel size ({nav User Preferences > System > Virtual Pixel Size}) here on Linux (kinda simulating what retina does).
Martin Lindelöf changed title from Brush can't paint smaller than 3px unless pen pressure is checked for Radius in UV/Image Editor on Mac OSX to OSX retina - image paint brush paints 2x wider than brush setting, cant paint 1px 2016-06-02 14:40:56 +02:00

This issue was referenced by c5b2f12b36

This issue was referenced by c5b2f12b36a048ffe7c78f42ffeed1e190ad8d1d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48456
No description provided.