Fix T48456: 2x pixel size clamps min brush size

Using double pixel size prevented 1px brushes

D2044 by @jeske